Update basyx.submodelservice/basyx.submodelservice-backend-inmemory/src/main/java/org/eclipse/digitaltwin/basyx/submodelservice/InMemorySubmodelBackend.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>